# cuda_pytorch

./: .gitignore  pyproject.toml
cuda/: Makefile  README.md  compile_flags.txt  main.py  parallel_mult.cpp  parallel_mult.py  parallel_mult_kernel.cu  requirements.txt  setup.py
cuda/test/: basic_test.py  check_tensors.py  parallel_mult.py  test_1x1.py  test_1x2.py  test_2x1.py  test_2x2.py  test_assign.py  timing.py
