[tool.poetry]
name = "cuda-pytorch"
version = "0.1.0"
description = ""
authors = ["Snir Bachar <snir@quantum-machines.co>"]
readme = "README.md"
packages = [{include = "cuda_pytorch"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
numpy = "^1.24.3"
mypy = "^1.2.0"
pep8 = "^1.7.1"
numba = "^0.57.0"
matplotlib = "^3.7.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypi = "^0.0.3"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
